--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.3'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
     implementation 'com.google.android.material:material:1.2.0'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 //    kapt 'com.android.databinding:compiler:3.1.4'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
